--- a/sidebar.html
+++ b/sidebar.html
@@ -23,6 +23,8 @@
       <li><a href="tugas_4.html" target="konten">📝 Tugas 4</a></li>
       <li><a href="tugas_5.html" target="konten">✏️ Tugas 5</a></li>
       <li><a href="tugas_6.html" target="konten">✏️ Tugas 6</a></li>
+      <li><a href="tugas_7.html" target="konten">📝 Tugas 7</a></li>
+      <li><a href="tugas_8.php" target="konten">🐘 tugas 8</a></li>
     </ul>
   </div>
 </body>
